# TODOAPP

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  go.mod  pyproject.toml  t.go  test.db  tests.py
.code_quality/: .flake8
.github/workflows/: python.yml
app/: .coverage  adapters.py  conftest.py  injection.py  main.py  models.py  services.py  test.db  test.py  test_integration.py
app/htmlcov/: __init___py.html  adapters_py.html  class_index.html  conftest_py.html  function_index.html  index.html  models_py.html  services_py.html  status.json  test_py.html
htmlcov/: d_5f5a17c013354698___init___py.html  d_5f5a17c013354698_adapters_py.html  d_5f5a17c013354698_models_py.html  d_5f5a17c013354698_services_py.html  d_5f5a17c013354698_test_py.html  index.html  status.json
test/: test.py  test_main.py
