[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["Jhon Valderrama <jhonvalderramaa7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
hashids = "^1.3.1"
coverage = "^7.4.4"


[tool.poetry.group.dev.dependencies]
#flake8 = "^7.0.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
#mypy = "^1.9.0"
pylint = "^3.1.0"
#black = "^24.4.0"
#bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | .venv
    | env
    | .env
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''